Bug 91720 - MailMerge: After MailMerge Print, the single print is not possible
Summary: MailMerge: After MailMerge Print, the single print is not possible
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.0.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Juergen Funk
URL:
Whiteboard: target:5.1.0 target:5.0.0.0.beta2
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-29 13:09 UTC by Juergen Funk
Modified: 2016-10-25 19:24 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Juergen Funk 2015-05-29 13:09:39 UTC
When you load a MailMerge-File and start the printjob for that MailMerge, then it print the documents.
But after that, it is not possible to print single printjob, after a restart of LO the single printjob works.

I'm not sure it is this the same tdf#91377
Comment 1 Juergen Funk 2015-05-29 13:24:29 UTC
Fixed in gerrit:  https://gerrit.libreoffice.org/15973
Comment 2 Commit Notification 2015-05-29 14:05:45 UTC
Juergen Funk committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1950ad547462fface018aafe7b65d5ceb445648a

tdf#91720 -after MailMerge print, plain std print is not possible

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2015-05-29 19:21:37 UTC
Juergen Funk committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a606ef96bf5f297e953874eef253ef7b13bfb944&h=libreoffice-5-0

tdf#91720 - after MailMerge print, plain std print is not possible

It will be available in 5.0.0.0.beta2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.