tdf#91720 - after MailMerge print, plain std print is not possible

Reset the batchmode variable, after the batch print job
Related: 138d29aa09417eba4d15ade4c9f4dab2620b6326

(cherry picked from commit 1950ad547462fface018aafe7b65d5ceb445648a)

Change-Id: I6d8861e53ba6245019213d88d83603bfe932f010